test/tests/BadAnnotations3.expected
BadAnnotations3.panda:10:1: error: methods may not be annotated with '@specialize'
BadAnnotations3.panda:10:1: error: methods may not be annotated with '@weak'
BadAnnotations3.panda:10:1: error: methods may not be annotated with '@unsafeImmutable'
BadAnnotations3.panda:10:1: error: methods annotated with '@external' may not have a body
BadAnnotations3.panda:10:1: error: methods annotated with '@abstract' may not have a body
BadAnnotations3.panda:10:1: error: conflicting access modifier annotations
BadAnnotations3.panda:13:1: error: expected non-abstract method 'foo' to have a body
7 errors
