test/tests/BadAnnotations3.panda
@private
@protected
@package
@implicit
@abstract
@external
@specialize
@weak
@unsafeImmutable
method main() {
}

method foo()
